[package]
name = "bambulab_streamer"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "2.0.0-rc.3"
clap = { version = "4.5.18", features = ["derive"] }
log = "0.4.22"
stderrlog = "0.6.0"
tokio = { version = "1.40.0", features = ["full"] }
tokio-native-tls = { version = "0.3.1", features = ["vendored"] }
